# smart-dashboard-ws

./: .gitmodules  CLAUDE.md  setup-smart-dashboard.sh
.claude/agents/: swift-coder.md
services/api/: .env.example  .gitignore  pyproject.toml
services/api/app/: config.py  main.py
services/api/app/models/: item.py  task.py
services/api/app/routers/: items.py  tasks.py
services/api/app/schemas/: item.py  task.py
services/api/tests/: conftest.py  test_items.py  test_tasks.py
